# bmkg-pipe

./: .gitignore  README.md  config.yaml  fetch_pubmed.py  rag_baseline.py  requirements.txt  run_pipeline.py  server.py  test_neo4j.py
CT-Engine/: ARCHITECTURE.md  BUILDING_ACTIONS.md  INDEX.md  PACKAGE_OVERVIEW.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  VISUAL_GUIDE.md  action_tests.ipynb  decompose_example.py  decomposition_test.ipynb  pyproject.toml  react_verdant.py  setup.py  verdant_experiment.py
CT-Engine/frontend/: README.md  __init__.py  compare.html  index.html  requirements.txt  run.sh  server.py
CT-Engine/semantic_parser/: __init__.py  action_protocol.py  llm_client.py
CT-Engine/semantic_parser/modules/cypher/: __init__.py
CT-Engine/semantic_parser/modules/spider2/: __init__.py
CT-Engine/semantic_parser/modules/spider2v/: __init__.py
CT-Engine/semantic_parser/modules/verdant/: actions.py  db_utils.py  openai_utils.py  utils.py
CT-Engine/semantic_parser/modules/verdant/cache/fundcashflow/: fundcashflow_column_descriptions.json  fundcashflow_column_format_descriptions.json  fundcashflow_description.txt  (+1 more)
CT-Engine/semantic_parser/modules/verdant_decompose/: __init__.py  table_utils.py
CT-Engine/semantic_parser/src/: __init__.py
CT-Engine/semantic_parser/src/baseline/: __init__.py  baseline_engine.py  db.xlsx
CT-Engine/semantic_parser/src/decompose/: __init__.py  composition_executor.py  decompose_agent.py  decompose_utils.py
CT-Engine/semantic_parser/src/react/: __init__.py  prompt_builder.py  react_engine.py  reasoning_step.py
(+72 files in other folders)
