[project]
name = "computational-thinking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.122.0",
    "openai>=2.7.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pydantic>=2.12.4",
    "suql>=1.1.8",
    "tabulate>=0.9.0",
    "uvicorn>=0.38.0",
]
